data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1874.wast
;; 5. **Test 5**:    - **Description**: A `br_if` for a label targeting a `loop` expecting multiple types (e.g., `i32`, `i64`), where `br_if` is provided with incomplete operand types.    - **Constraint**: Ensure the branching instruction correctly validates the required operand types for the loop.    - **Relation to Type Mismatch**: Checks for type mismatch errors related to incomplete operand type provisioning.

(assert_invalid
  (module
    (func
      (block
        (loop (result i32 i64)
          (br_if 0 (i32.const 1))
        )
      )
    )
  )
  "type mismatch"
)